[package]
name = "nodejs-wasm-typescript"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"

[lib]
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
wasm-bindgen = "0.2"
